// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditPolicyForm expect to render with alter 1`] = `
<DocumentFragment>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-tabs"
      data-ouia-component-id="EditPolicy"
      data-ouia-component-type="PF4/Tabs"
      data-ouia-safe="true"
      id="policy-tabs"
    >
      <button
        aria-hidden="true"
        aria-label="Scroll left"
        class="pf-c-tabs__scroll-button"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
      <ul
        class="pf-c-tabs__list"
        role="tablist"
      >
        <li
          class="pf-c-tabs__item pf-m-current"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-details-policy-tabs"
            aria-selected="true"
            class="pf-c-tabs__link"
            data-ouia-component-id="Details"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-details-policy-tabs"
            role="tab"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              Details
            </span>
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-rules-policy-tabs"
            aria-selected="false"
            class="pf-c-tabs__link"
            data-ouia-component-id="Rules"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-rules-policy-tabs"
            role="tab"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              Rules
            </span>
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-systems-policy-tabs"
            aria-selected="false"
            class="pf-c-tabs__link"
            data-ouia-component-id="Systems"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-systems-policy-tabs"
            role="tab"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              Systems
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-hidden="true"
        aria-label="Scroll right"
        class="pf-c-tabs__scroll-button"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <section
      aria-labelledby="pf-tab-details-policy-tabs"
      class="pf-c-tab-content"
      data-ouia-component-id="Details"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      id="pf-tab-section-details-policy-tabs"
      role="tabpanel"
      tabindex="0"
    >
      <div
        class="pf-c-form"
      >
        <div
          class="pf-c-form__group"
        >
          <div
            class="pf-c-form__group-label"
          >
            <label
              class="pf-c-form__label"
              for="description"
            >
              <span
                class="pf-c-form__label-text"
              >
                Policy description
              </span>
              <span
                aria-hidden="true"
                class="pf-c-form__label-required"
              >
                 *
              </span>
            </label>
             
          </div>
          <div
            class="pf-c-form__group-control"
          >
            <textarea
              aria-describedby="description"
              aria-invalid="false"
              class="pf-c-form-control"
              id="description"
              name="description"
              required=""
              style="width: 800px; height: 110px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="pf-c-form__group"
        >
          <div
            class="pf-c-form__group-label"
          >
            <label
              class="pf-c-form__label"
              for="business-objective"
            >
              <span
                class="pf-c-form__label-text"
              >
                Business objective
              </span>
            </label>
             
            <span>
               
              <svg
                aria-hidden="true"
                class="grey-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </span>
          </div>
          <div
            class="pf-c-form__group-control"
          >
            <input
              aria-describedby="business-objective"
              aria-invalid="false"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-3"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              id="business-objective"
              name="business-objective"
              style="width: 300px;"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="pf-c-form__group"
        >
          <div
            class="pf-c-form__group-label"
          >
            <label
              class="pf-c-form__label"
              for="policy-threshold"
            >
              <span
                class="pf-c-form__label-text"
              >
                Compliance threshold (%)
              </span>
            </label>
             
            <span>
               
              <svg
                aria-hidden="true"
                class="grey-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </span>
          </div>
          <div
            class="pf-c-form__group-control"
          >
            <input
              aria-describedby="policy-threshold"
              aria-invalid="false"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-4"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              id="compliance-threshold"
              name="compliance-threshold"
              style="width: 150px;"
              type="number"
              value="100"
            />
            <div
              aria-live="polite"
              class="pf-c-form__helper-text"
              id="policy-threshold-helper"
            >
              A value of 95% or higher is recommended
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="pf-tab-rules-policy-tabs"
      class="pf-c-tab-content"
      data-ouia-component-id="Rules"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      hidden=""
      id="pf-tab-section-rules-policy-tabs"
      role="tabpanel"
      tabindex="0"
    >
      <div
        class="ins-c-table__empty"
      >
         
        <div
          class="ins-c-spinner"
          role="status"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading...
          </span>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="pf-tab-systems-policy-tabs"
      class="pf-c-tab-content"
      data-ouia-component-id="Systems"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      hidden=""
      id="pf-tab-section-systems-policy-tabs"
      role="tabpanel"
      tabindex="0"
    >
      <section
        class="inventory"
      >
        <div>
          <h1>
            Inventory mock
          </h1>
        </div>
      </section>
    </section>
  </form>
</DocumentFragment>
`;

exports[`EditPolicyForm expect to render without error 1`] = `
<DocumentFragment>
  <form
    class="pf-c-form"
    novalidate=""
  >
    <div
      class="pf-c-tabs"
      data-ouia-component-id="EditPolicy"
      data-ouia-component-type="PF4/Tabs"
      data-ouia-safe="true"
      id="policy-tabs"
    >
      <button
        aria-hidden="true"
        aria-label="Scroll left"
        class="pf-c-tabs__scroll-button"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
          />
        </svg>
      </button>
      <ul
        class="pf-c-tabs__list"
        role="tablist"
      >
        <li
          class="pf-c-tabs__item pf-m-current"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-details-policy-tabs"
            aria-selected="true"
            class="pf-c-tabs__link"
            data-ouia-component-id="Details"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-details-policy-tabs"
            role="tab"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              Details
            </span>
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-rules-policy-tabs"
            aria-selected="false"
            class="pf-c-tabs__link"
            data-ouia-component-id="Rules"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-rules-policy-tabs"
            role="tab"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              Rules
            </span>
          </button>
        </li>
        <li
          class="pf-c-tabs__item"
          role="presentation"
        >
          <button
            aria-controls="pf-tab-section-systems-policy-tabs"
            aria-selected="false"
            class="pf-c-tabs__link"
            data-ouia-component-id="Systems"
            data-ouia-component-type="PF4/TabButton"
            data-ouia-safe="true"
            id="pf-tab-systems-policy-tabs"
            role="tab"
          >
            <span
              class="pf-c-tabs__item-text"
            >
              Systems
            </span>
          </button>
        </li>
      </ul>
      <button
        aria-hidden="true"
        aria-label="Scroll right"
        class="pf-c-tabs__scroll-button"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 256 512"
          width="1em"
        >
          <path
            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
          />
        </svg>
      </button>
    </div>
    <section
      aria-labelledby="pf-tab-details-policy-tabs"
      class="pf-c-tab-content"
      data-ouia-component-id="Details"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      id="pf-tab-section-details-policy-tabs"
      role="tabpanel"
      tabindex="0"
    >
      <div
        class="pf-c-form"
      >
        <div
          class="pf-c-form__group"
        >
          <div
            class="pf-c-form__group-label"
          >
            <label
              class="pf-c-form__label"
              for="description"
            >
              <span
                class="pf-c-form__label-text"
              >
                Policy description
              </span>
              <span
                aria-hidden="true"
                class="pf-c-form__label-required"
              >
                 *
              </span>
            </label>
             
          </div>
          <div
            class="pf-c-form__group-control"
          >
            <textarea
              aria-describedby="description"
              aria-invalid="false"
              class="pf-c-form-control"
              id="description"
              name="description"
              required=""
              style="width: 800px; height: 110px;"
              type="text"
            />
          </div>
        </div>
        <div
          class="pf-c-form__group"
        >
          <div
            class="pf-c-form__group-label"
          >
            <label
              class="pf-c-form__label"
              for="business-objective"
            >
              <span
                class="pf-c-form__label-text"
              >
                Business objective
              </span>
            </label>
             
            <span>
               
              <svg
                aria-hidden="true"
                class="grey-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </span>
          </div>
          <div
            class="pf-c-form__group-control"
          >
            <input
              aria-describedby="business-objective"
              aria-invalid="false"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-1"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              id="business-objective"
              name="business-objective"
              style="width: 300px;"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="pf-c-form__group"
        >
          <div
            class="pf-c-form__group-label"
          >
            <label
              class="pf-c-form__label"
              for="policy-threshold"
            >
              <span
                class="pf-c-form__label-text"
              >
                Compliance threshold (%)
              </span>
            </label>
             
            <span>
               
              <svg
                aria-hidden="true"
                class="grey-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                />
              </svg>
            </span>
          </div>
          <div
            class="pf-c-form__group-control"
          >
            <input
              aria-describedby="policy-threshold"
              aria-invalid="false"
              class="pf-c-form-control"
              data-ouia-component-id="OUIA-Generated-TextInputBase-2"
              data-ouia-component-type="PF4/TextInput"
              data-ouia-safe="true"
              id="compliance-threshold"
              name="compliance-threshold"
              style="width: 150px;"
              type="number"
              value="100"
            />
            <div
              aria-live="polite"
              class="pf-c-form__helper-text"
              id="policy-threshold-helper"
            >
              A value of 95% or higher is recommended
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="pf-tab-rules-policy-tabs"
      class="pf-c-tab-content"
      data-ouia-component-id="Rules"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      hidden=""
      id="pf-tab-section-rules-policy-tabs"
      role="tabpanel"
      tabindex="0"
    >
      <div
        class="ins-c-table__empty"
      >
         
        <div
          class="ins-c-spinner"
          role="status"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading...
          </span>
        </div>
      </div>
    </section>
    <section
      aria-labelledby="pf-tab-systems-policy-tabs"
      class="pf-c-tab-content"
      data-ouia-component-id="Systems"
      data-ouia-component-type="PF4/TabContent"
      data-ouia-safe="true"
      hidden=""
      id="pf-tab-section-systems-policy-tabs"
      role="tabpanel"
      tabindex="0"
    >
      <section
        class="inventory"
      >
        <div>
          <h1>
            Inventory mock
          </h1>
        </div>
      </section>
    </section>
  </form>
</DocumentFragment>
`;
